--- a/cvalejandro.html
+++ b/cvalejandro.html
@@ -3,13 +3,19 @@
 <head>
 	<title>CV alejandro gzz</title>
 	<meta charset="utf-8">
+	<meta name="description" content="Diseño Grafico">
+	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+	<meta name="author" content="Alejandro Gonzalez">
+
+	<meta property="og:title" content="CV Alejandro" />
+	<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Emoticon_Smile_Face.svg/440px-Emoticon_Smile_Face.svg.png" />
 
 </head>
 <body>
 <h2>Alejandro Gonzalez</h2>
 <img src="fotocv.jpg">
 <h4>Diseñador Grafico</h4>
-<a href="https://www.behance.net/Alexglz">behance</a>
+<a href="https://www.behance.net/Alexglz">Portafolio</a>
 
 <h3>Educación</h3>
 <h5>Universidad de Monterrey</h5>
@@ -66,9 +72,28 @@
 <h5>Curso de tipografia - Henk Van Assen</h5>
 <p>director del estudio HVA Design.</p>
 
+<form>
+	<fieldset>
+	<legend>Info Contacto</legend>
+		Nombre:<br>
+	  	<input type="text" name="nombre"><br>
+	  	Apellido:<br>
+	 	<input type="text" name="apellido"><br>
+	 	Email:<br>
+	 	<input type="text" name="email"><br>
+	 	<br>
+	 	Necesito:<br>
+	 	<input type="radio" name="trabajo" value="logo" checked> Logo<br>
+	    <input type="radio" name="trabajo" value="branding"> Branding<br>
+	    <input type="radio" name="trabajo" value="poster"> Poster<br>
+	    <input type="radio" name="trabajo" value="editorial"> Editorial<br>
+	    <input type="radio" name="trabajo" value="web"> Web<br>
+	</fieldset>
+</form>
+
+
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7192.262578790855!2d-100.31862967577956!3d25.66694223471934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1463019220117" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-<br>
-<a href="https://www.behance.net/Alexglz">Portafolio</a>
+
 </body>
 
 </html>
